k8s/github-actions-poc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: github-actions-poc-service
  namespace: github-actions-poc
spec:
  selector:
    app: github-actions-poc-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
